tests/models/struct/named/string/fail/min_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_items = 2)]
    value: String,
}
fn main() {}
